# TutoQTNotepadCLion

./: .gitignore  CMakeLists.txt  main.cpp  notepad.cpp  notepad.h  notepad.ui
notepad/: notepad.cpp  notepad.h  notepad.ui
resources/: resources.qrc
